fix sidebar overflow

--- a/src/template/sass-kss/kss-parts/_sidebar.scss
+++ b/src/template/sass-kss/kss-parts/_sidebar.scss
@@ -12,6 +12,7 @@
       border-top: 1px solid $border-color;
       border-bottom: 1px solid $border-color;
       background-color: $white;
+      overflow-x: hidden;
     }
 
     .list-group {
